[package]
name = "mget"
version = "1.0.0"
edition = "2021"

[package.metadata]
repository = "https://github.com/nearest-river/mget"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
tl = "0.7.8"
regex = "1.11.0"
anyhow = "1.0.89"
percent-encoding = "2.3.1"
tokio = { version = "1.40.0", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.8", features = ["rustls-tls"] }
futures = { version = "0.3.31", features = ["thread-pool"] }
tracing = { version = "0.1.40", features = ["async-await"] }
indicatif = { version = "0.17.8", features = ["futures", "tokio"] }
tracing-subscriber = { version = "0.3.18", features = ["tracing"] }
